--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.6",
     "@reduxjs/toolkit": "^2.2.7",
+    "eventemitter2": "^6.4.9",
+    "leaflet": "^1.9.4",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
-    "roslib": "^1.4.1"
+    "ros3d": "^0.17.0",
+    "roslib": "^1.4.1",
+    "three": "^0.167.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
