--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
-    "@mui/material": "^5.16.6",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
     "@reduxjs/toolkit": "^2.2.7",
     "eventemitter2": "^6.4.9",
     "leaflet": "^1.9.4",
@@ -22,6 +23,7 @@
     "react-grid-layout": "^1.4.4",
     "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.1",
     "ros3d": "^0.17.0",
     "roslib": "^1.4.1",
     "three": "^0.167.1"
