--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
+    "react-use-websocket": "^4.10.1",
     "ros3d": "^0.17.0",
     "roslib": "^1.4.1",
     "three": "^0.167.1"
