--- a/jsconfig.json
+++ b/jsconfig.json
@@ -8,7 +8,7 @@
       "@utils/*": ["utils/*"],
       "@hooks/*": ["hooks/*"],
       "@reducer/*": ["reducer/*"],
-      "@pages/*": ["pages/*"]
+      "@services/*": ["services/*"]
     }
   }
 }
