--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "eventemitter2": "^6.4.9",
     "leaflet": "^1.9.4",
+    "notistack": "^3.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
